--- a/app/views/release_notes/_generated_release_notes.html.erb
+++ b/app/views/release_notes/_generated_release_notes.html.erb
@@ -1,4 +1,4 @@
 <div style="width: 80%; margin: 10px auto 10px auto; border: thin solid #222266;">
-<pre style="padding:3em; word-wrap:break-word;" id=relnotes><%= @content %></pre>
+<div style="padding:3em; word-wrap:break-word; font-family:monospace; white-space: pre-wrap;" id="relnotes"><%= @content %></div>
 </div>
 </div>
