--- a/app/views/release_notes/generate.html.erb
+++ b/app/views/release_notes/generate.html.erb
@@ -1,23 +1,21 @@
 <% html_title l('release_notes.generate_title', :version => @version.name) %>
 
 <%= render :partial => 'warnings',
-	:locals => { :version => @version, :project => @project, :format => @format } %>
+	:locals => { :version => @version, :project => @project } %>
 
 <div style="width:100%;">
 <h2><%= l('release_notes.generate_title', :version => @version.name) %></h2>
 <p>
 <%= link_to l('release_notes.raw'), :raw => "true",
-  :release_notes_format => params[:release_notes_format] %> | 
+  :release_notes_format => params[:release_notes_format] || @format.name %> | 
 <%= link_to l('release_notes.download'), :download => "true",
-  :release_notes_format => params[:release_notes_format] %>
+  :release_notes_format => params[:release_notes_format] || @format.name %>
 </p>
 
 <%= render_other_formats(@formats) %>
 
-<!-- 
-<%= render :partial => 'generated_release_notes', :raw => "true", :release_notes_format => params[:release_notes_format] %>
--->
+<iframe src="<%= url_for :raw => "true", :release_notes_format => params[:release_notes_format] || @format.name, :version => @version, :project => @project %>" frameborder="0" scrolling="auto" style="width: 80%; height: 600px; border: 1px solid grey; border-radius: 3px;">
 
+</iframe>
 
-<iframe id="iframe" src="<%= url_for :raw => "true", :release_notes_format => params[:release_notes_format] %>" frameborder="0" scrolling="auto" style="width: 80%; height: 600px; border: 1px solid grey; border-radius: 3px;"> </iframe>
-
+</div>
